# FYP

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile.orchestrator  README.md  aggregate_export_strategy.md  build-all-docker.sh  build-docker.sh  cleanup-docker.sh  docker-compose.yml  frontend-navigation-flowcharts.md  migrate_to_unified_cv22_schema.md  package-lock.json  package.json  pyproject.toml  redis-autocomplete-test-commands.md  setup_rls_policies.md  sprint-planning-table.md  supabase.md  supabase_data_upload_guide.md  test_cv22_export.md
backend/: pyproject.toml
backend/src/: orchestrator.py
backend/src/asr_models/: base.Dockerfile
backend/src/asr_utils/: base_transcriber.py  service_utils.py  test_utils.py
backend/src/autocomplete/: Dockerfile  README.md  go.mod  main.go
backend/src/prompts/: __init__.py  consensus_prompts.py  final_prompts.py  particle_prompts.py  search_prompts.py  validation_prompts.py
benchmarks/: asr_model_comparison.py  docker_commands.md  run_asr_benchmark.sh
benchmarks/benchmarks/results/: asr_results.json
benchmarks/results/: asr_results.json
deprecated/python_files/: main.py  orchestrator_deprecated_functions.py
deprecated/requirement_files/: mesolitica_requirements.txt  vosk_requirements.txt  whisper_requirements.txt
dev_tools/: cv22_import.py  requirements.txt  upload_cv22_audio.py
exports/: README.md  export_cv22.py  export_cv22_tui.py  export_examples.sh  export_interactive.sh  requirements_export.txt
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AccentSelection.tsx  AdvancedEditorFeaturesDialog.tsx  AudioUpload.tsx  AuthModal.tsx  CustomParticleDialog.tsx  DataSourceSelection.tsx  DockerLoadingDialog.tsx  DockerStatus.tsx  ParticleDetection.tsx  PronounConsolidationStage.tsx  ProtectedRoute.tsx  Ribbon.tsx  StageNavigation.tsx  StageProgressBar.tsx  TextEditor.tsx  ThemeToggle.tsx  ThemeToggleButton.tsx  TranscriptionComparison.tsx  TranscriptionValidation.tsx  UserHistory.tsx  UserProfile.tsx  VimToggle.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: api.ts  supabase.ts
frontend/src/pages/: Index.tsx  Login.tsx  SignupSuccess.tsx
frontend/src/styles/: autocomplete.css  vim-cursor.css
src/: .env  main.py  orchestrator.py  requirements.txt  storage.py
src/asr_models/: base.Dockerfile
src/asr_models/allosaurus/: Dockerfile  allosaurus_requirements.txt  allosaurus_service.py  run_allosaurus.sh  stt_model_allosaurus.py
src/asr_models/deepspeech/: requirements_deepspeech.txt  run_deepspeech.sh  stt_model_deepspeech.py
src/asr_models/mesolitica/: Dockerfile  mesolitica_requirements.txt  mesolitica_service.py  run_mesolitica.sh  stt_model_mesolitica.py
src/asr_models/moonshine/: Dockerfile  requirements_moonshine.txt  run_moonshine.sh  stt_model_moonshine.py
src/asr_models/vosk/: Dockerfile  requirements_vosk.txt  run_vosk.sh  stt_model_vosk.py  vosk_requirements.txt  vosk_service.py
src/asr_models/wav2vec/: Dockerfile  requirements_wav2vec.txt  run_wav2vec.sh  stt_model_wav2vec.py  wav2vec_service.py
src/asr_models/whisper/: Dockerfile  run_whisper.sh  (+2 more)
src/asr_utils/: audio_utils.py  base_transcriber.py  requirements.txt  requirements_audio.txt
tests/: conftest.py  test_asr_models.py
tests/asr_models/: test_moonshine.py  test_wav2vec.py  test_whisper.py
tui/: run_asr_models.py  run_asr_tui.sh
(+38 files in other folders)
